fix(partners): make logos smaller on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,6 +149,10 @@ p {
         width: 90vw;
     }
 
+    .partner {
+        height: 8em;
+    }
+
     .text a {
         margin-top: 1em;
     }
